--- a/views/admin/edit-products.hbs
+++ b/views/admin/edit-products.hbs
@@ -4,7 +4,7 @@
       <div class="row">
           <div class='col-md-6'>
               <h1 class="ml-auto text-center mt-3 mb-3">Edit Products </h1>
-              <form action="add-product" enctype="multipart/form-data" method="POST">
+              <form action="/admin/edit-product/{{product._id}}" enctype="multipart/form-data" method="POST">
             <div class="form-group">
                 <label class = 'mb-2'for="formGroupExampleInput">Name</label>
                 <input type="text" class="form-control" name="Name" value="{{product.Name}}" id="formGroupExampleInput" >
