--- a/views/admin/admin-products.hbs
+++ b/views/admin/admin-products.hbs
@@ -22,7 +22,7 @@
       <td>{{this.Name}}</td>
       <td>{{this.Price}}</td>
       <td>{{this.Description}}</td>
-      <td><img   style="width: 50px; height: 50px;" src="/product-images/{{this._id}}.png" alt=""></td>
+      <td><img   style="width: 60px; height: 60px; object-fit: contain;" src="/product-images/{{this._id}}.png" alt=""></td>
       <td style="" class=""><a  href="admin/edit-products?id={{this._id}}">
         <button  class="btn btn-primary">
             Edit
