--- a/views/admin/edit-products.hbs
+++ b/views/admin/edit-products.hbs
@@ -19,8 +19,8 @@
             </div>
             <div class="form-group">
                 <label class = 'mb-2' for="formGroupExampleInput2">Image</label>
-                <img src="/product-images/{{product._id}}.png" class="pt-3 pb-3" style="object-fit:contain; width: 100px;" alt="">
-                <input type="file" class="form-control" name="Image" id="formGroupExampleInput2" >
+                <img src="/product-images/{{product._id}}.png" class="pt-3 pb-3" style="object-fit:contain; width: 100px;" id="imgView" alt="">
+                <input type="file" onchange="viewImg(event)" class="form-control" name="Image" id="formGroupExampleInput2" >
             </div>
             <button class="btn btn-success mt-3" type="submit ">Submit</button>
             </form>
@@ -28,3 +28,9 @@
       </div>
   </div>
 </section>
+
+<script>
+    function viewImg(event){
+        document.getElementById('imgView').src = URL.createObjectURL(event.target.files[0])
+    }
+</script>
