cart items added to db

--- a/views/users/view-products.hbs
+++ b/views/users/view-products.hbs
@@ -15,7 +15,7 @@
                     <div class="card-body">
                         <div class="clearfix mb-3"> <span class="float-start badge rounded-pill bg-success">{{this.Price}}</span> <span class="float-end"><a href="#" class="small text-muted">Check availability</a></span> </div>
                         <h5 class="card-title">{{this.Description}}</h5>
-                        <div class="text-center my-4"> <a href="#" class="btn btn-warning">Add to Cart</a> </div>
+                        <div class="text-center my-4"> <a href="add-to-cart/{{this._id}}" class="btn btn-warning">Add to Cart</a> </div>
                         <div class="clearfix mb-1"> <span class="float-start"><i class="far fa-question-circle"></i></span> <span class="float-end"><i class="fas fa-plus"></i></span> </div>
                     </div>
                 </div>
