--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -1,10 +1,11 @@
+
 <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid ">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand " href="#">Shopping Cart</a>
+    <a class="navbar-brand " href="/">Shopping Cart</a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -14,7 +15,7 @@
           <a class="nav-link" href="#">Link</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/cart"> Cart </a>
+          <a class="nav-link" href="/cart"> Cart <span class="badge bg-primary">{{cartCount}}</span> </a>
         </li>
       </ul>
       
